--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,7 +31,7 @@
         <p> Interview pitch</p>
         <p>Clarify your job target. ...</p>
         <hr>
-        <P> Promotion pitch</P>
+        <P> pitch Promotion </P>
         <p>A  relationship with a sales promotion agency normally starts with a pitch.</p>
         <br><br>
         <a href= "{{url_for('main.newpitch')}}"> New pitch</a>
