--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -13,3 +13,23 @@
 
 {% endfor %} 
 {% endmacro %}
+
+
+
+
+
+
+
+{% macro displayComments(comments) %}
+
+    {% for comment in comments %}
+   
+<h2>{{comment.comment}}</h2>
+
+
+
+
+
+
+{% endfor %} 
+{% endmacro %}
